[gd_scene load_steps=6 format=3 uid="uid://d5n8vtwu4psq"]

[ext_resource type="Script" path="res://Scripts/delta.gd" id="1_nq0de"]
[ext_resource type="Texture2D" uid="uid://gdk12vffpoue" path="res://Assets/Tanks/tankBlack_outline.png" id="2_74jd5"]
[ext_resource type="Texture2D" uid="uid://b81kptyg5wpad" path="res://Assets/Tanks/barrelBlack_outline.png" id="3_eoppy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhkfi"]
size = Vector2(81, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsd0s"]
size = Vector2(91, 82)

[node name="Delta" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_nq0de")
metadata/_edit_vertical_guides_ = [48.0]
metadata/_edit_horizontal_guides_ = [0.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_hhkfi")

[node name="Body" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("2_74jd5")

[node name="Barrel" type="Sprite2D" parent="."]
texture = ExtResource("3_eoppy")
centered = false
offset = Vector2(-12, -12)

[node name="BulletSpawn" type="Marker2D" parent="Barrel"]
position = Vector2(56, 0)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_enabled = true

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(3.5, 0)
shape = SubResource("RectangleShape2D_nsd0s")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -19.0
offset_top = -65.0
offset_right = 21.0
offset_bottom = -42.0
text = "delta"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
